eks-deployment/old/evershop-deployment.yaml
# Namespace Definition
apiVersion: v1
kind: Namespace
metadata:
  name: evershop
---
# Deployment Definition
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evershop-app
  namespace: evershop  # Specify your namespace here
spec:
  replicas: 3
  selector:
    matchLabels:
      app: evershop
  template:
    metadata:
      labels:
        env: production
        app: evershop
    spec:
      containers:
        - name: evershop-app
          image: shubh301/my-evershop-image:v1  # Docker Hub image
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "512Mi"    # Minimum memory requested
              cpu: "500m"        # Minimum CPU requested
            limits:
              memory: "1Gi"      # Maximum memory allowed
              cpu: "1"           # Maximum CPU allowed
