eks-deployment/old/service-node-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  labels:
    k8s-app: node-exporter
spec:
  ports:
    - port: 9100
      targetPort: 9100
  selector:
    k8s-app: node-exporter
